# ygodeck-android

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle
res/layout/: activity_card_searcher.xml  activity_card_viewer.xml  activity_deck.xml  activity_deck_set.xml  activity_main.xml  fragment_maindeck_grid.xml  fragment_maindeck_list.xml
res/menu/: menu_card_searcher.xml  menu_card_viewer.xml  menu_deck.xml  menu_deck_set.xml
res/raw/: card.db
res/values/: refs.xml  strings.xml
res/values-sw600dp/: refs.xml
src/com/example/ygodeck/: CardSearcher.java  CardViewer.java  DeckActivity.java  DeckAdapter.java  DeckContent.java  DeckSetActivity.java  ExtraDeckFragment.java  MainActivity.java  MainDeckFragment.java  SideDeckFragment.java
